[package]
name = "envoyproxy"
version = "0.1.0"
authors = ["Naftuli Kay <me@naftuli.wtf>"]
edition = "2018"
description = "Envoy ProtoBuf and JSON data bindings for Rust via Prost and Serde."

homepage = "https://github.com/naftulikay/envoyproxy.rs"
repository = "https://github.com/naftulikay/envoyproxy.rs"
license = "MIT OR Apache-2.0"

[dependencies]
